# stat-exam

./: .clang-format  CMakeLists.txt
data/: magic04.root
datafiles/cr_flux/: livetime.root  res_matrix.root
script/: cr_check_distributions.cpp
src/: CMakeLists.txt  localization.h.in
src/generation/cr_flux/: CMakeLists.txt  main.cpp  resolution_model.cpp  resolution_model.h  spectrum.cpp  spectrum.h
src/generation/inv_mass/: CMakeLists.txt  main.cpp  resolution_model.cpp  resolution_model.h
src/solution/: CMakeLists.txt
src/solution/cr_flux/: CMakeLists.txt
src/solution/inv_mass/: CMakeLists.txt  bayes_solver.cpp  bayes_solver.h  forward_solver.cpp  forward_solver.h  main.cpp  svd_solver.cpp  svd_solver.h  utils.cpp  utils.h
